--- a/i3/config
+++ b/i3/config
@@ -3,191 +3,176 @@
 #██║╚════██╗    ██╔════╝██╔═══██╗████╗  ██║██╔════╝██║██╔════╝ 
 #██║ █████╔╝    ██║     ██║   ██║██╔██╗ ██║█████╗  ██║██║  ███╗
 #██║ ╚═══██╗    ██║     ██║   ██║██║╚██╗██║██╔══╝  ██║██║   ██║
-#██║██████╔╝    ╚██████╗╚██████╔╝██║ ╚████║██║     ██║╚██████╔╝
-#╚═╝╚═════╝      ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝     ╚═╝ ╚═════╝ 
+#██║██████╔╝    ╚██████╗╚██████╔╝██║ ╚████║██║     ██║╚██████╔╝ ╚═╝╚═════╝      ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝     ╚═╝ ╚═════╝ 
 #
 # i3 Config 2021-01-13
 #   
 
+#   Mod
+#   ,-----------------------------------------|      |-----------------------------------------.
+#   | Esc  |   1  |   2  |   3  |   4  |  5   |      |   6  |   7  |   8  |   9  |   0  | Bksp |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Tab  | Kill |  W5  |  W6  |  W7  | W8   |      |   Y  |FocPar|FocChi| Res  | Max  | Del  |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Caps |Tabbed|  W1  |  W2  |  W3  |  W4  |      | Left | Down |  Up  |Right |   ;  |  '   |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Shift| Split|  W9  |  W10 |VerSpl|HorSpl|      |   N  |   M  |   ,  |   .  |   /  |  Fn  |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Ctrl | Mod  | Alt  | Rofi |      | Home |      |  =   |      | LArr | DArr | UArr | RArr |
+#   |------+------+------+------+SwiFlo+------|      |------+ Term +------+------+------+------|
+#   |      |      |      |      |      | End  |      |  -   |      |       |     |      |      |
+#   `-----------------------------------------|      |-----------------------------------------'
+#
+#   Mod + Shift
+#   ,-----------------------------------------|      |-----------------------------------------.
+#   |LogOut|Restar|   2  |   3  |   4  |  5   |      |   6  |   7  |   8  |   9  |   0  | Bksp |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Tab  |   Q  | MV W5| MV W6| MV W7| MV W8|      |   Y  |   U  |   I  |   O  |MaxMon| Del  |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Caps |   A  | MV W1| MV W2| MV W3| MV W4|      |   H  |   J  |   K  |   L  |   ;  |  '   |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Shift|   Z  | MV W9|MV W10|   V  |  B   |      |   N  |   M  |   ,  |   .  |   /  |  Fn  |
+#   |------+------+------+------+------+------|      |------+------+------+------+------+------|
+#   | Ctrl | Mod  | Alt  |      |      | Home |      |  =   |      | Left | Down |  Up  |Right |
+#   |------+------+------+------+TogFlo+------|      |------+------+------+------+------+------|
+#   |      |      |      |      |      | End  |      |  -   |      |       |     |      |      |
+#   `-----------------------------------------|      |-----------------------------------------'
+
+
+
 # Sets mod key to Super
 set $mod Mod4
 
-# Font display for the tops
-font pango:SF UI Display 10
-
-# Start XDG autostart .desktop files using dex. See also
-# https://wiki.archlinux.org/index.php/XDG_Autostart
+font pango:SF UI Display 12
 exec --no-startup-id dex --autostart --environment i3
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-
+# Colors
 set $bg-color 	         #2f343f
 set $inactive-bg-color   #2f343f
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
+set $urgent-bg-color     #e06c75
+set $indicator-color 	 #61afef
+client.focused          $bg-color          $bg-color          $text-color          $indicator-color 
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color
+client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color          $indicator-color
 
-# window colors
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
-# Yeets the Window Borders
+# Gaps
 for_window [class="^.*"] border pixel 2
-                          # class                 border  backgr. text    indicator child_border
-for_window [class="^.*"] client.focused          #77dd77 #285577 #ffffff #2e9ef4   #285577
-
+gaps inner 20
+gaps outer 10
+smart_borders on
+smart_borders no_gaps
+border_radius 3
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i2status
+bindsym XF86AudioPause exec playerctl play-pause
 
+# Screenshot utility
+bindsym --release Mod1+Shift+s exec scrot -s '/tmp/%F_%T_$wx$h.png' -e 'xclip -selection clipboard -target image/png -i $f'
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
-
-# start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
-
-# kill focused window
-bindsym $mod+Shift+q kill
-
-# start dmenu (a program launcher)
-bindsym $mod+apostrophe exec rofi -show run -lines 5 -eh 2 -width 100 -padding 800 opacity "85" -bw 0 -bc "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "SF UI Display 14"
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
-
+bindsym $mod+apostrophe exec rofi -show run -lines 3 -eh 2 -width 100 -padding 80 -opacity "65" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "System San Francisco Display 12"
+bindsym $mod+q kill
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
-
 # move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
-
 # Split Horizontal Vertical
 bindsym $mod+b split h
 bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
+#bindsym $mod+a layout stacking
+bindsym $mod+a layout tabbed
+bindsym $mod+z layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
-
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
-
 # focus the parent container
-bindsym $mod+a focus parent
-
+bindsym $mod+u focus parent
 # focus the child container
-#bindsym $mod+d focus child
-
-
-
+bindsym $mod+i focus child
+# Fullscreen a Window (First is to monitor, second is all monitors)
+bindsym $mod+p fullscreen toggle 
+bindsym $mod+shift+p fullscreen toggle global
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1|"
-set $ws2 "2|"
-set $ws3 "3|"
-set $ws4 "4|"
-set $ws5 "5|"
-set $ws6 "6|"
-set $ws7 "7|"
-set $ws8 "8|"
-set $ws9 "9|"
-set $ws10 "10|"
+set $ws1 1 Firefox
+set $ws2 2 Flex
+set $ws3 3 Code
+set $ws4 4 Discord+Music
+set $ws5 5 Email
+set $ws6 6
+set $ws7 7 Gimp
+set $ws8 8
+set $ws9 9 Games
+set $ws10 10
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+s workspace number $ws1
+bindsym $mod+d workspace number $ws2
+bindsym $mod+f workspace number $ws3
+bindsym $mod+g workspace number $ws4
+bindsym $mod+w workspace number $ws5
+bindsym $mod+e workspace number $ws6
+bindsym $mod+r workspace number $ws7
+bindsym $mod+t workspace number $ws8
+bindsym $mod+x workspace number $ws9
+bindsym $mod+c workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+s move container to workspace number $ws1
+bindsym $mod+Shift+d move container to workspace number $ws2
+bindsym $mod+Shift+f move container to workspace number $ws3
+bindsym $mod+Shift+g move container to workspace number $ws4
+bindsym $mod+Shift+w move container to workspace number $ws5
+bindsym $mod+Shift+e move container to workspace number $ws6
+bindsym $mod+Shift+r move container to workspace number $ws7
+bindsym $mod+Shift+t move container to workspace number $ws8
+bindsym $mod+Shift+x move container to workspace number $ws9
+bindsym $mod+Shift+c move container to workspace number $ws10
 
 # open applications on specific workspaces
-assign [class="firefox"] $workspace1
-assign [class="Firefox"] $workspace1
-assign [class="Dolphin"] $workspace3
-assign [class="Thunderbird"] $workspace7
-assign [class="Spotify"] $workspace10
-for_window [class="Spotify"] move to workspace $workspace10 
-assign [class="Rhythmbox"] $workspace4
-assign [class="Audacious"] $workspace4
-assign [class="Gnome-mplayer"] $workspace5
-assign [class="Vlc"] $workspace5
-assign [class="Totem"] $workspace5
-assign [class="Gimp"] $workspace8
-assign [class="Photoshop.exe"] $workspace8
-assign [class="Gthumb"] $workspace8
+assign [class="firefox"] $ws1
+assign [class="Thunar"] $ws2
+assign [class="Emacs"] $ws3
+assign [class="discord"] $ws4
+assign [class="Apple Music"] $ws4
+assign [class="Thunderbird"] $ws5
+assign [class="Gimp"] $ws7
 
+exec discord
+exec apple-music-electron
+exec thunar
+#bindsym $mod+Shift+c reload
+bindsym $mod+Shift+1 restart
+bindsym $mod+Shift+Escape exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# resize window (you can also use the mouse for that)
 mode "resize" {
-	# These bindings trigger as soon as you enter the resize mode
 	bindsym h resize shrink width 10 px or 10 ppt
 	bindsym j resize grow height 10 px or 10 ppt
 	bindsym k resize shrink height 10 px or 10 ppt
 	bindsym l resize grow width 10 px or 10 ppt
-	# back to normal: Enter or Escape or $mod+r
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
-	bindsym $mod+r mode "default"
+	bindsym $mod+o mode "default"
 }
-
-bindsym $mod+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-	status_command i3status
-}
+bindsym $mod+o mode "resize"
