--- a/polybar/config
+++ b/polybar/config
@@ -66,7 +66,7 @@
 	module-margin-right = 2
 
 	font-0 = fixed:pixelsize=10;1
-	font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+	font-1 = unifont:fontformat=truetype:size=8:antialias=true;0
 	font-2 = siji:pixelsize=10;1
 
 	modules-left = i3
@@ -251,10 +251,11 @@
 
 	format-spacing = 1
 
-	label-open = 
-	label-open-foreground = ${colors.secondary}
+	label-open = PWR
+	format-underline = #e06c75
+	label-open-foreground = #ffffff
 	label-close =  cancel
-	label-close-foreground = ${colors.secondary}
+	label-close-foreground = #ffffff
 	label-separator = |
 	label-separator-foreground = ${colors.foreground-alt}
 
