Switched Neovim LSP
Org Mode is fully setup, and I've switched to Neo Vim LSP

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 AppleMusic/
 Badlion Client/
 BadlionClient/
+brinkervii/
 GIMP/
 appimagelauncher.cfg
 coc/
@@ -9,8 +10,10 @@ dconf/
 discord/
 emacs/
 emacs.d/
+Jetbrains/
 libreoffice/
 libvirt/
+lutris/
 menus/
 mimeapps.list
 neofetch/
