Kitty Terminal, Zathura

--- a/i3/config
+++ b/i3/config
@@ -120,7 +120,7 @@ set $ws2 2 Flex
 set $ws3 3 Code
 set $ws4 4 Discord+Music
 set $ws5 5 Email
-set $ws6 6
+set $ws6 6 Windows
 set $ws7 7 Gimp
 set $ws8 8
 set $ws9 9 Games
