--- a/polybar/config
+++ b/polybar/config
@@ -42,7 +42,53 @@
 	; vim:ft=dosini
 
 [bar/haadibar]
-	;monitor = ${env:MONITOR:}
+	;monitor = DP-0
+	width = 100%
+	height = 24
+	;offset-x = 1%
+	;offset-y = 1%
+	radius = 6.0
+	fixed-center = false
+
+	background = ${colors.background}
+	foreground = ${colors.foreground}
+
+	line-size = 3
+	line-color = #f00
+
+	border-size = 4
+	border-color = #00000000
+
+	padding-left = 0
+	padding-right = 2
+
+	module-margin-left = 1
+	module-margin-right = 2
+
+	font-0 = fixed:pixelsize=10;1
+	font-1 = unifont:fontformat=truetype:size=8:antialias=true;0
+	font-2 = siji:pixelsize=10;1
+
+	modules-left = i3
+	modules-center = mpd
+	modules-right = pulseaudio xkeyboard memory cpu wlan eth weather date powermenu
+
+	tray-position = right
+	tray-padding = 2
+	;tray-background = #0063ff
+
+	;wm-restack = i3
+
+	;override-redirect = true
+
+	;scroll-up = i3wm-wsnext
+	;scroll-down = i3wm-wsprev
+
+	cursor-click = pointer
+	cursor-scroll = ns-resize
+
+[bar/twobar]
+	;monitor = DP-3
 	width = 100%
 	height = 24
 	;offset-x = 1%
