Bare Emacs, no more Doom Emacs

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,14 @@ AppleMusic/
 Badlion Client/
 BadlionClient/
 brinkervii/
+Cider/
+chromium/
 GIMP/
 appimagelauncher.cfg
 coc/
 configstore/
 dconf/
 discord/
-emacs/
 emacs.d/
 JetBrains/
 libreoffice/
