--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
-BetterDiscord Installer/
-Code/
-FRC Utilities/
-balena-etcher/
-dunst/
-gthumb/
-guvcview2/
-nitrogen/
-xed/
+AppleMusic/
 Badlion Client/
 BadlionClient/
 brinkervii/
 Cider/
+Code/
 chromium/
 GIMP/
 appimagelauncher.cfg
@@ -18,6 +11,7 @@ coc/
 configstore/
 dconf/
 discord/
+emacs/
 emacs.d/
 JetBrains/
 libreoffice/
@@ -38,3 +32,15 @@ xfce4/
 user-dirs.dirs
 user-dirs.locale
 zoomus.conf
+Electron/
+cef_user_data/
+conductor/
+cura/
+enchant/
+gthumb/filters.xml
+nvim/UltiSnips/
+nvim/templates/
+unity3d/
+Advantage Scope/
+BetterDiscord Installer/Local Storage/leveldb/LOG.old
+BetterDiscord Installer/Session Storage/LOG.old
