--- a/gtk-2.0/gtkfilechooser.ini
+++ b/gtk-2.0/gtkfilechooser.ini
@@ -1,9 +1,9 @@
 [Filechooser Settings]
 LocationMode=path-bar
-ShowHidden=false
+ShowHidden=true
 ShowSizeColumn=true
-GeometryX=505
-GeometryY=131
+GeometryX=246
+GeometryY=381
 GeometryWidth=948
 GeometryHeight=699
 SortColumn=name
