--- a/QtProject.conf
+++ b/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/haadi, file:///run/media/haadi/Storage/Downloads
-lastVisited=file:///home/haadi/Documents
+history=file:///home/haadi, file:///run/media/haadi/Storage/Downloads, file:///home/haadi/Storage/Videos
+lastVisited=file:///home/haadi/Storage/Videos
 qtVersion=5.15.3
 shortcuts=file:///home/haadi/Desktop, file:///home/haadi/Documents, file:///home/haadi, file:///home/haadi/Music, file:///home/haadi/Pictures, file:///home/haadi/Videos, file:///run/media/haadi/Storage/Downloads
 sidebarWidth=90
