--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *~
 AppleMusic/
 Badlion Client/
+BetterDiscord Installer/*
+Mailspring/*
+next-prayer/*
+thefuck/*
 BadlionClient/
 balena-etcher/
 brinkervii/
