--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -50,7 +50,7 @@ graph_symbol_proc = "default"
 shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 300
+update_ms = 100
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
@@ -184,7 +184,7 @@ net_upload = 100
 net_auto = True
 
 #* Sync the auto scaling for download and upload to whichever currently has the highest scale.
-net_sync = False
+net_sync = True
 
 #* Starts with the Network Interface specified here.
 net_iface = ""
