--- a/i3/config
+++ b/i3/config
@@ -43,6 +43,8 @@
 
 # Sets mod key to Super
 set $mod Mod4
+set $monitor_left DP-0
+set $monitor_right DP-3
 
 # Startup Processes
 	font pango:SF UI Display 12
@@ -121,18 +123,29 @@ bindsym $mod+i focus child
 bindsym $mod+p fullscreen toggle 
 bindsym $mod+shift+p fullscreen toggle global
 
-
 # Workspaces
-	set $ws1 1 
-	set $ws2 2
-	set $ws3 3
-	set $ws4 4
-	set $ws5 5
-	set $ws6 6
-	set $ws7 7
-	set $ws8 8
-	set $ws9 9
-	set $ws10 10
+set $ws1 1 
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6
+set $ws7 7
+set $ws8 8
+set $ws9 9
+set $ws10 10
+
+# COMMENT THIS SECTION OUT ON LAPTOP! Sets Workspaces to monitors
+workspace $ws1 output $monitor_left
+workspace $ws2 output $monitor_right
+workspace $ws3 output $monitor_left
+workspace $ws4 output $monitor_right
+workspace $ws5 output $monitor_left
+workspace $ws6 output $monitor_right
+workspace $ws7 output $monitor_left
+workspace $ws8 output $monitor_right
+workspace $ws9 output $monitor_left
+workspace $ws10 output $monitor_right
 
 # switch to workspace
 bindsym $mod+s workspace number $ws1
@@ -167,6 +180,7 @@ assign [class="Slack"] $ws5
 
 exec discord
 exec cider
+exec mailspring
 exec /usr/bin/emacs --daemon &
 exec autotiling -w 1 2 4 9
 
