--- a/QtProject.conf
+++ b/QtProject.conf
@@ -1,8 +1,26 @@
 [FileDialog]
-history=file:///home/haadi, file:///run/media/haadi/Storage/Downloads, file:///home/haadi/Storage/Videos, file:///home/haadi/Documents
-lastVisited=file:///home/haadi/Documents
-qtVersion=5.15.4
-shortcuts=file:///home/haadi/Desktop, file:///home/haadi/Documents, file:///home/haadi, file:///home/haadi/Music, file:///home/haadi/Pictures, file:///home/haadi/Videos, file:///run/media/haadi/Storage/Downloads
+history=file:///home/haadi, file:///run/media/haadi/Storage/Downloads, file:///home/haadi/Storage/Videos, file:///home/haadi/Documents, file:///home/haadi/Documents/FreeCAD
+lastVisited=file:///home/haadi/Documents/FreeCAD
+qtVersion=5.12.9
+shortcuts=file:///home/haadi/Desktop, file:///home/haadi/Documents, file:///home/haadi, file:///home/haadi/Music, file:///home/haadi/Pictures, file:///home/haadi/Videos
 sidebarWidth=90
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0_\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
+
+[Qt]
+customColors\0=4289442495
+customColors\1=4280822836
+customColors\10=4291197149
+customColors\11=4289423562
+customColors\12=4284244848
+customColors\13=4283126371
+customColors\14=4283872962
+customColors\15=4283548326
+customColors\2=4292897909
+customColors\3=4290662470
+customColors\4=4288201593
+customColors\5=4285247849
+customColors\6=4293247099
+customColors\7=4291926630
+customColors\8=4284592111
+customColors\9=4284185046
