--- a/polybar/config
+++ b/polybar/config
@@ -71,7 +71,7 @@
 
 	modules-left = i3
 	modules-center = mpd
-	modules-right = pulseaudio xkeyboard memory cpu wlan eth weather battery date powermenu
+	modules-right = pulseaudio xkeyboard memory cpu weather battery date powermenu
 
 	tray-position = right
 	tray-padding = 2
