Updated with new font

--- a/BetterDiscord/data/stable/settings.json
+++ b/BetterDiscord/data/stable/settings.json
@@ -13,7 +13,7 @@
     },
     "customcss": {
         "customcss": true,
-        "liveUpdate": false,
+        "liveUpdate": true,
         "openAction": "settings"
     },
     "editor": {
