--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,6 +19,7 @@ color14 #56b6c2
 color15 #abb2bf
 selection_foreground #282c34
 selection_background #979eab
-font_size 11.5
+font_family Recursive Mn Lnr St SmB
+font_size 11
 cursor_shape block
 enable_audio_bell no
