--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=Noto Sans 11
+gtk-font-name=Recursive Sans Linear Static 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=14
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
