Added New Borders + Bar Updates

--- a/i3/config
+++ b/i3/config
@@ -58,7 +58,7 @@ set $monitor_right DP-3
 	exec feh --bg-scale /run/media/haadi/Storage/Pictures/Wallpaper.png
 	exec xrandr --output DVI-D-0 --off --output HDMI-0 --off --output DP-0 --primary --mode 1920x1080 --pos 0x0 --rate 144.00 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --mode 1920x1080 --pos 1920x0 --rotate normal --output DP-4 --off --output DP-5 --off
 
-	exec ~/.config/xborder/xborders -c ~/.config/xborder/config.json
+	exec python ~/.config/xborder/xborders
 	exec discord
 	exec cider
 	exec mailspring
